--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,9 @@
 @tailwind utilities;
 
 
+::-webkit-scrollbar {
+  display: none;
+}
 
 :root {
   --dark-navy: #020c1b;
@@ -92,6 +95,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: var(--green-tint);
+  border: 1px solid var(--green-tint);
   opacity: 1;
   mix-blend-mode: screen;
   z-index: 1;
@@ -101,6 +105,7 @@ body {
 
 .featured-project-item .img-container:hover::after {
   opacity: 0;
+  border-color: transparent;
 }
 
 
